--- a/readme
+++ b/readme
@@ -13,6 +13,7 @@ You can convert the dataset using the script provided in the scripts sub-folder.
 
 Already trained MLP and CNN models are provided in the mlp_models and convo_models. 
 
+Link to the video: https://www.youtube.com/watch?v=YMCOMA3FNHo
 ########
 
 Citations : 
